-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.4.0
-
3
-
7290
1 mds, 2 oss with 150 osts each
1 client mounted doing
for i in $(seq 1 300); do
lfs setstripe /mnt/lustre/dir$i
touch /mnt/lustre/dir$i/file
lfs getstripe /mnt/lustre/dir$i
done
rm -rf /mnt/lustre/dir*
LustreError: 3627:0:(osd_internal.h:909:osd_trans_exec_op()) ASSERTION( oti->oti_declare_ops_rb[rb] > 0 ) failed: rb = 2
LustreError: 3627:0:(osd_internal.h:909:osd_trans_exec_op()) LBUG
Pid: 3627, comm: mdt02_001
Call Trace:
[<ffffffffa04cd895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
[<ffffffffa04cde97>] lbug_with_loc+0x47/0xb0 [libcfs]
[<ffffffffa0d1c688>] osd_trans_exec_op+0x128/0x160 [osd_ldiskfs]
[<ffffffffa0d26878>] osd_xattr_set+0x278/0x380 [osd_ldiskfs]
[<ffffffffa0edef30>] lod_generate_and_set_lovea+0x350/0x720 [lod]
[<ffffffffa0eea6d6>] lod_striping_create+0x1e6/0x320 [lod]
[<ffffffffa0eea983>] lod_object_create+0x173/0x260 [lod]
[<ffffffffa0c3b540>] mdd_object_create_internal+0xa0/0x1c0 [mdd]
[<ffffffffa0c4e503>] mdd_create+0x963/0x1470 [mdd]
[<ffffffffa0ee7460>] ? lod_index_lookup+0x0/0x30 [lod]
[<ffffffffa0e4bf84>] mdt_reint_open+0x13d4/0x20d0 [mdt]
[<ffffffffa04ea7ae>] ? upcall_cache_get_entry+0x28e/0x860 [libcfs]
[<ffffffffa07bb7ec>] ? lustre_msg_add_version+0x6c/0xc0 [ptlrpc]
[<ffffffffa0638cf0>] ? lu_ucred+0x20/0x30 [obdclass]
[<ffffffffa0e368c1>] mdt_reint_rec+0x41/0xe0 [mdt]
[<ffffffffa0e2ff23>] mdt_reint_internal+0x4e3/0x7d0 [mdt]
[<ffffffffa0e304dd>] mdt_intent_reint+0x1ed/0x4f0 [mdt]
[<ffffffffa0e2c0ae>] mdt_intent_policy+0x3ae/0x750 [mdt]
[<ffffffffa0774351>] ldlm_lock_enqueue+0x361/0x8d0 [ptlrpc]
[<ffffffffa079a3e7>] ldlm_handle_enqueue0+0x4f7/0x10b0 [ptlrpc]
[<ffffffffa0e2c586>] mdt_enqueue+0x46/0x110 [mdt]
[<ffffffffa0e21168>] mdt_handle_common+0x628/0x1620 [mdt]
[<ffffffffa0e5a285>] mds_regular_handle+0x15/0x20 [mdt]
[<ffffffffa07cc27c>] ptlrpc_server_handle_request+0x41c/0xdf0 [ptlrpc]
[<ffffffffa04ce5de>] ? cfs_timer_arm+0xe/0x10 [libcfs]
[<ffffffffa04dfd8f>] ? lc_watchdog_touch+0x6f/0x170 [libcfs]
[<ffffffffa07c38b9>] ? ptlrpc_wait_event+0xa9/0x290 [ptlrpc]
[<ffffffff81052223>] ? __wake_up+0x53/0x70
[<ffffffffa07cd7c5>] ptlrpc_main+0xb75/0x1870 [ptlrpc]
[<ffffffffa07ccc50>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
[<ffffffff8100c0ca>] child_rip+0xa/0x20
[<ffffffffa07ccc50>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
[<ffffffffa07ccc50>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
[<ffffffff8100c0c0>] ? child_rip+0x0/0x20
LustreError: dumping log to /tmp/lustre-log.1363711711.3627