lustre/osd-ldiskfs/osd_internal.h
@@ -318,9 +318,11 @@ enum {
 	OSD_OT_MAX		= 11
 };
 
+/* disable transaction debug on all versions due to LU-2991
 #if LUSTRE_VERSION_CODE < OBD_OCD_VERSION(2, 3, 90, 0)
 # define OSD_TRACK_DECLARES
 #endif
+*/
 
 struct osd_thandle {
         struct thandle          ot_super;
@@ -594,8 +596,8 @@ struct osd_thread_info {
 	/* Tracking for transaction credits, to allow debugging and optimizing
 	 * cases where a large number of credits are being allocated for
 	 * single transaction. */
-	unsigned char		oti_declare_ops[OSD_OT_MAX];
-	unsigned char		oti_declare_ops_rb[OSD_OT_MAX];
+	unsigned short		oti_declare_ops[OSD_OT_MAX];
+	unsigned short		oti_declare_ops_rb[OSD_OT_MAX];
 	unsigned short		oti_declare_ops_cred[OSD_OT_MAX];
 	bool			oti_rollback;
 #endif
